@@ -1,3 +1,7 @@
+2015-02-05  Jerold Haas  <jeroldhaas@gmail.com>
+
+	* SearchEntry.cs: 
+
 2015-01-30  Jerold Haas  <jeroldhaas@gmail.com>
 
 	* SearchEntry.cs:
